k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logto
  labels:
    app.kubernetes.io/name: logto
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: logto
  ports:
    - name: api
      port: 3001
      targetPort: api
    - name: admin
      port: 3002
      targetPort: admin
