k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logto
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - PLACEHOLDER_LOGTO_HOST
      secretName: logto-tls
    - hosts:
        - PLACEHOLDER_LOGTO_ADMIN_HOST
      secretName: logto-admin-tls
  rules:
    - host: PLACEHOLDER_LOGTO_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logto
                port:
                  number: 3001
    - host: PLACEHOLDER_LOGTO_ADMIN_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logto
                port:
                  number: 3002
